[package]
name = "cookie-router"
authors = ["Thorsten Hans & The Team Where Half of its Members Have Names Starting with 'M'"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.1.0"
uuid = {version = "0.8.1", features = ["v4"]}

[workspace]
