[package]
name = "qr"
authors = ["Mikkel Mørk Hegnhøj <mikkel@fermyon.com>"]
description = "QR Code generator"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1.10.0"
percent-encoding = "2.3.1"
qrcode-generator = "5.0.0"
spin-sdk = "3.1.0"
base64 = "0.13"

[workspace]
